kubernetes/jenkins-deployment.yaml
##########################################################################
# Jenkins
##########################################################################
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  labels:
    app: jenkins
    tiers: webapp
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  - name: slave
    port: 50000
    targetPort: 50000
    protocol: TCP
  selector:
    app: jenkins
    tiers: webapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jenkins
        tiers: webapp
    spec:
      containers:
      - image: fjudith/jenkins
        name: jenkins
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 50000
          name: slave
        volumeMounts:
        - name: jenkins-data
          mountPath: /var/jenkins_home
        - name: jenkins-log
          mountPath: /var/log/jenkins
      volumes:
      - name: jenkins-data
        persistentVolumeClaim:
          claimName: jenkins-data
      - name: jenkins-log
        persistentVolumeClaim:
          claimName: jenkins-log
---
##########################################################################
# Nginx Webserver
##########################################################################
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: jenkins
    tiers: frontend
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: jenkins
    tiers: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jenkins
        tiers: frontend
    spec:
      containers:
      - image: fjudith/jenkins:nginx
        name: nginx
        ports:
        - containerPort: 80
          name: http
---
##########################################################################
# Jenkins Slave
##########################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-slave
  labels:
    app: jenkins
    tiers: compiler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jenkins
        tiers: compiler
    spec:
      containers:
      - image: fjudith/jenkins:slave
        securityContext:
          privileged: true
        name: jenkins-slave
      volumes:
      - name: docker-sock-volume
        hostPath:
          # location on host
          path: /var/run/docker.sock
          # this field is optional
          type: File
---
